--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index"
+    "start": "npx webpack & node index"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "webpack": "^4.41.0"
   },
   "devDependencies": {
+    "eslint": "^6.5.1",
     "webpack-cli": "^3.3.9"
   }
 }
